<resources>
    <string name="app_name">FoodbookApp</string>
    <string name="home">Ana sayfa</string>
    <string name="search">Ara</string>
    <string name="add_food">Ekle</string>
    <string name="profil">Profil</string>
    <string name="tolganin_mutfagi">Tolga\'nın Mutfağı</string>
    <string name="app_logo">App Logo</string>
    <string name="e_posta">E-posta</string>
    <string name="parola">Parola</string>
    <string name="sifreni_mi_unuttun">Şifreni mi unuttun?</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="parola_tekrar">Parola Tekrar</string>
    <string name="isim">İsim</string>
    <string name="soyisim">Soyisim</string>
    <string name="hesabin_yok_mu">Hesabın yok mu?</string>
    <string name="button_login">Button Login</string>
    <string name="tarif_ekle">Yeni Tarif</string>
    <string name="tarif_adı">Tarif adı</string>
    <string name="tarifi_ekle">Tarifi Ekle</string>
    <string name="hazirlanis">Hazırlanış</string>
    <string name="malzeme_ekle">Malzeme Ekle</string>
    <string name="miktar">Miktar</string>
    <string name="kategori">Kategori</string>
    <string name="adet">adet</string>
    <string name="malzeme">Malzeme</string>
    <string name="aciklama">Açıklama</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>